# gpt2-trainer-studio

./: .gitignore  PROCESS.md  README.md
.kiro/specs/gpt-text-generator/: .config.kiro  design.md  requirements.md  tasks.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py  pipeline.py
backend/app/api/: dataset_routes.py  demo_routes.py  error_handler.py  evaluation_routes.py  generation_routes.py  model_routes.py  training_routes.py  websocket.py
backend/app/engines/: cache_manager.py  dataset_preparer.py  demo_orchestrator.py  evaluation_engine.py  generation_engine.py  model_loader.py  training_engine.py
backend/app/models/: schemas.py
backend/tests/: test_integration.py  test_main_assembly.py  test_model_loader.py  test_pipeline.py  test_property_cache.py  test_property_dataset.py  test_property_demo.py  test_property_error_responses.py  test_property_evaluation.py  test_property_generation.py  test_property_training.py  test_property_websocket.py  test_status_endpoint.py
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/__tests__/: validation.property.test.ts
frontend/src/components/: AboutModal.tsx  CommentaryPanel.test.ts  CommentaryPanel.tsx  ConnectionStatus.test.ts  ConnectionStatus.tsx  ControlPanel.test.ts  ControlPanel.tsx  DatasetStatsDisplay.tsx  DemoControls.tsx  EvaluationDisplay.tsx  GenerationPanel.test.ts  GenerationPanel.tsx  ModelSummaryDisplay.tsx  ProgressPanel.test.ts  ProgressPanel.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  (+4 more)
(+4 files in other folders)
