[project]
name = "gpt-text-generator-backend"
version = "0.1.0"
description = "FastAPI backend for GPT-2 text generator training application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "datasets>=2.19.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
